# refixy

./: .gitignore  Cargo.toml  README.md
src/: clipboard.rs  executor.rs  main.rs  shortcuts.rs  tray.rs
